Add issue Offline collections
- It is now possible to specify that a collection is on a drive which isn't always online, but shall still be used for global duplicate check.
- The index files from such collections will be synced to the default collection's archive folder on app shutdown.

--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.de.resx
@@ -447,4 +447,10 @@ Andernfalls sollten Sie zumindest die Standorteinträge „Download“ und „Bl
   <data name="ErrorOpeningBlogUrl" xml:space="preserve">
     <value>{0}: Fehler beim Öffnen der Blog-URL!</value>
   </data>
+  <data name="FoundUnusedCacheFolder" xml:space="preserve">
+    <value>Ungenutzten Cache-Ordner gefunden: {0}</value>
+  </data>
+  <data name="FoundWrongNamedCacheFolder" xml:space="preserve">
+    <value>Falsch benannter Cache-Ordner gefunden: {0}</value>
+  </data>
 </root>
