--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.es.resx
@@ -788,7 +788,7 @@ Desactive la opción si desea utilizar su propia plantilla para conjuntos de fot
   </data>
   <data name="ToolTipAuthenticateBrowserDescription" xml:space="preserve">
     <value>Abre una ventana del navegador para autenticarse en el sitio tumblr.com.
-La cookie con sus credenciales de su cuenta se guarda y el proceso de autenticación debe realizarse solo una vez.</value>
+Las cookies utilizadas para la autenticación se guardan y el proceso de autenticación debe realizarse solo una vez.</value>
   </data>
   <data name="UserAgent" xml:space="preserve">
     <value>Agente de usuario</value>
@@ -868,7 +868,7 @@ Todos los archivos de índice dentro de esta subcarpeta se pueden usar para la v
     <value>Nombre de la colección:</value>
   </data>
   <data name="CollectionsHint" xml:space="preserve">
-    <value>La ubicación de descarga solo se usa para blogs recién creados en esa colección. Si se elimina una colección, los blogs asignados se mostrarán en la colección predeterminada.</value>
+    <value>La ubicación de descarga solo se usa para blogs recién creados en esa colección. Si se cambia la colección asignada de un blog, solo los archivos de índice del blog se mueven a la nueva colección. La carpeta de descarga del blog debe moverse manualmente, si es necesario.</value>
   </data>
   <data name="Feedback" xml:space="preserve">
     <value>Feedback</value>
@@ -926,5 +926,29 @@ menos espacio de almacenamiento.</value>
   </data>
   <data name="ToolTipPnjDownloadFormat" xml:space="preserve">
     <value>Formato de imagen para descargar enlaces PNJ</value>
+  </data>
+  <data name="CollectionOptions" xml:space="preserve">
+    <value>Opciones:</value>
+  </data>
+  <data name="OfflineDuplicateCheck" xml:space="preserve">
+    <value>Caché para verificación de duplicados fuera de línea</value>
+  </data>
+  <data name="IsArchiveCollection" xml:space="preserve">
+    <value>es archivo</value>
+  </data>
+  <data name="ToolTipIsArchiveCollection" xml:space="preserve">
+    <value>La colección es un archivo</value>
+  </data>
+  <data name="ToolTipIsArchiveCollectionDescription" xml:space="preserve">
+    <value>Si está activado, la colección se marca como archivo.
+La colección es de solo lectura y no se le pueden asignar blogs.</value>
+  </data>
+  <data name="ToolTipOfflineDuplicateCheck" xml:space="preserve">
+    <value>Almacene en caché las bases de datos del blog para la verificación de duplicados fuera de línea</value>
+  </data>
+  <data name="ToolTipOfflineDuplicateCheckDescription" xml:space="preserve">
+    <value>Si está activado, las bases de datos del blog de esta colección se copian en una 
+carpeta de caché dentro de la carpeta de archivo de la colección predeterminada. 
+La copia se realiza en cierre de la aplicación, si la colección está disponible.</value>
   </data>
 </root>
