--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.resx
@@ -832,7 +832,7 @@ Activation will increase the memory usage during operation based on the amount o
   </data>
   <data name="ToolTipAuthenticateBrowserDescription" xml:space="preserve">
     <value>Opens a browser window to authenticate yourself to the tumblr.com site.
-The cookie with your credentials of your account is saved and the authentication process needs to be done only once.</value>
+The cookies used for authentication are saved and the authentication process needs to be done only once.</value>
   </data>
   <data name="UserAgent" xml:space="preserve">
     <value>User agent</value>
@@ -1102,7 +1102,7 @@ Possible categories: large, medium, small</value>
     <value>Collections</value>
   </data>
   <data name="CollectionsHint" xml:space="preserve">
-    <value>The download location is only used for newly created blogs under that collection. If a collection is deleted the assigned blogs will be shown under the default collection.</value>
+    <value>The download location is only used for newly created blogs under that collection. If the assigned collection of a blog is changed, only the blog's index files are moved to the new collection. The blog's download folder needs to be moved manually, if necessary.</value>
   </data>
   <data name="Feedback" xml:space="preserve">
     <value>Feedback</value>
@@ -1159,5 +1159,29 @@ version which normally is visually the same, but takes much less storage space.<
   </data>
   <data name="PnjDownloadFormat" xml:space="preserve">
     <value>Download PNJ as</value>
+  </data>
+  <data name="CollectionOptions" xml:space="preserve">
+    <value>Options:</value>
+  </data>
+  <data name="OfflineDuplicateCheck" xml:space="preserve">
+    <value>cache for offline duplicate check</value>
+  </data>
+  <data name="IsArchiveCollection" xml:space="preserve">
+    <value>is archive</value>
+  </data>
+  <data name="ToolTipIsArchiveCollection" xml:space="preserve">
+    <value>Collection is an archive</value>
+  </data>
+  <data name="ToolTipOfflineDuplicateCheck" xml:space="preserve">
+    <value>Cache the blog databases for offline duplicate check</value>
+  </data>
+  <data name="ToolTipIsArchiveCollectionDescription" xml:space="preserve">
+    <value>If activated, the collection is marked as an archive.
+The collection is readonly and no blogs can be assigned to it.</value>
+  </data>
+  <data name="ToolTipOfflineDuplicateCheckDescription" xml:space="preserve">
+    <value>If activated, this collection's blog databases are copied to a cache folder 
+inside the default collection's archive folder. The copying is done on 
+shutdown of the application, if the collection is available.</value>
   </data>
 </root>
