Add Show blog description when hoovering blog name in details pane

--- a/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
+++ b/src/TumblThree/TumblThree.Presentation/Properties/Resources.de.resx
@@ -954,4 +954,7 @@ Die Sammlung ist schreibgeschützt und ihr können keine Blogs zugeordnet werden
 im Archiv-Ordner der Standardsammlung kopiert. Das Kopieren erfolgt beim 
 Herunterfahren der Anwendung, falls die Sammlung verfügbar ist.</value>
   </data>
+  <data name="Description" xml:space="preserve">
+    <value>Beschreibung</value>
+  </data>
 </root>
