--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -312,7 +312,7 @@
     <value>Evaluated {0} tumblr post urls out of {1} total posts.</value>
   </data>
   <data name="ProgressGetUrlShort" xml:space="preserve">
-    <value>Evaluated {0} tumblr blog sites.</value>
+    <value>Evaluated {0} tumblr blog pages.</value>
   </data>
   <data name="ProgressSkipFile" xml:space="preserve">
     <value>{0} already downloaded, skipping ..</value>
@@ -479,5 +479,14 @@ Else you should change at least the "Download" and "Export Blogs" location entri
   </data>
   <data name="GotHtmlNotJson" xml:space="preserve">
     <value>The server returned the wrong type of data. For downloading some blogs ({0}) you have to log in (settings dialog) and accept a privacy consent.</value>
+  </data>
+  <data name="ProgressGetUrl2Long" xml:space="preserve">
+    <value>Evaluated {0} post urls out of {1} total posts.</value>
+  </data>
+  <data name="ProgressGetUrl2Short" xml:space="preserve">
+    <value>Evaluated {0} blog posts.</value>
+  </data>
+  <data name="ErrorDownloadingBlog2" xml:space="preserve">
+    <value>Error while downloading '{0}' ({1}). Please retry shortly. A low value (1-2) of "Concurrent blogs" is also helpful.</value>
   </data>
 </root>
