--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.el.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.el.resx
@@ -324,7 +324,7 @@
 Θέλετε να το κατεβάσετε τώρα;</value>
   </data>
   <data name="ErrorDownloadingBlog" xml:space="preserve">
-    <value>An error occurred while downloading '{0}': {1} ({2})</value>
+    <value>An error occurred while downloading '{0}' ({2}): {1}</value>
   </data>
   <data name="DownloadVCRedistributableTitle" xml:space="preserve">
     <value>Απαιτούμενο συστατικό που λείπει</value>
