--- a/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
+++ b/src/TumblThree/TumblThree.Applications/Properties/Resources.resx
@@ -427,7 +427,7 @@ Do you want to download it now?</value>
     <value>Search term '{0}' not found!</value>
   </data>
   <data name="ErrorDownloadingBlog" xml:space="preserve">
-    <value>An error occurred while downloading '{0}': {1} ({2})</value>
+    <value>An error occurred while downloading '{0}' ({2}): {1}</value>
   </data>
   <data name="SwitchTo64BitVersion" xml:space="preserve">
     <value>It looks like your system supports 64-bit applications,
